improve DepCache