@@ -1,16 +1,26 @@
 package io.root.patcher;
 
+import org.gradle.api.logging.Logger;
+import org.gradle.api.logging.Logging;
+
+import groovy.json.JsonOutput;
+import groovy.json.JsonSlurper;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.function.Supplier;
 
 public class DepCache {
 
+    private static final Logger logger = Logging.getLogger(ApiKeyResolver.class);
     private static final String CACHE_SUBDIR = ".gradle/rootio-cache";
+    private static final String PATCHED_COORDS_KEY = "patched";
+    private static final String HASHING_ALGORITHM = "SHA-1";
 
     /**
      * Look up the patched coordinates for {@code coords} from the local cache.
@@ -25,9 +35,15 @@ public class DepCache {
      */
     public static String lookup(String coords, File rootDir, long ttlHours, Supplier<String> onMiss) {
         File cacheFile = cacheFile(coords, rootDir);
+
         if (cacheFile.exists() && isWithinTtl(cacheFile, ttlHours)) {
-            return readCache(cacheFile);
+            logger.debug("Using cached patch for {} from {}", coords, cacheFile);
+            Map<String, String> cached = readCache(cacheFile);
+            if (cached != null) {
+                return cached.get(PATCHED_COORDS_KEY);
+            }
         }
+
         String result = onMiss.get();
         writeCache(cacheFile, result);
         return result;
@@ -40,44 +56,54 @@ public class DepCache {
 
     private static File cacheFile(String coords, File rootDir) {
         File dir = new File(rootDir, CACHE_SUBDIR);
+        //noinspection ResultOfMethodCallIgnored
         dir.mkdirs();
         return new File(dir, sha1(coords) + ".json");
     }
 
-    private static String readCache(File file) {
+    private static Map<String, String> readCache(File file) {
+        byte[] content;
+
         try {
-            String content = Files.readString(file.toPath());
-            // writeCache always writes without spaces, so this check is exact
-            if (content.contains("\"patched\":null")) return null;
-            int start = content.indexOf("\"patched\":\"") + 11;
-            int end = content.indexOf('"', start);
-            if (start < 11 || end <= start) return null;
-            return content.substring(start, end);
-        } catch (IOException e) {
-            return null; // treat read failure as cache miss
+            content = Files.readAllBytes(file.toPath());
+        } catch (IOException exception) {
+            logger.debug("Failed to read cache file {}", file, exception);
+            return null;
+        }
+
+        try {
+            //noinspection unchecked
+            return (Map<String, String>) new JsonSlurper().parse(content);
+        } catch (ClassCastException exception) {
+            logger.debug("Failed to parse cache file {}", file, exception);
+            return null;
         }
     }
 
     private static void writeCache(File file, String patchedCoords) {
-        String content = patchedCoords == null
-            ? "{\"patched\":null}"
-            : "{\"patched\":\"" + patchedCoords + "\"}";
+        Map<String, Object> map = new HashMap<>() {{
+            put(PATCHED_COORDS_KEY, patchedCoords);
+        }};
+
         try {
-            Files.writeString(file.toPath(), content);
-        } catch (IOException e) {
+            Files.writeString(file.toPath(), JsonOutput.toJson(map));
+        } catch (IOException exception) {
             // swallow — cache write failure is non-fatal; the build continues
+            logger.debug("Failed to write cache file {}", file, exception);
         }
     }
 
     private static String sha1(String input) {
         try {
-            MessageDigest md = MessageDigest.getInstance("SHA-1");
+            MessageDigest md = MessageDigest.getInstance(HASHING_ALGORITHM);
             byte[] hash = md.digest(input.getBytes(StandardCharsets.UTF_8));
             StringBuilder sb = new StringBuilder();
-            for (byte b : hash) sb.append(String.format("%02x", b));
+            for (byte b : hash) {
+                sb.append(String.format("%02x", b));
+            }
             return sb.toString();
-        } catch (NoSuchAlgorithmException e) {
-            throw new RuntimeException("SHA-1 not available", e);
+        } catch (NoSuchAlgorithmException exception) {
+            throw new RuntimeException(HASHING_ALGORITHM + " not available", exception);
         }
     }
 }
